--- a/css/style.css
+++ b/css/style.css
@@ -864,12 +864,12 @@ video {
   height: 90%;
   flex: 0.5; }
   .panel__one {
-    background-image: linear-gradient(rgba(10, 25, 161, 0.3), rgba(12, 34, 232, 0.3)), url(../img/panel/player-flag.png); }
+    background-image: url(../img/panel/player-flag.png); }
   .panel__two {
-    background-image: linear-gradient(rgba(10, 25, 161, 0.3), rgba(12, 34, 232, 0.3)), url(../img/panel/goalkeeper.png); }
+    background-image: url(../img/panel/goalkeeper.png); }
   .panel__three {
-    background-image: linear-gradient(rgba(10, 25, 161, 0.3), rgba(12, 34, 232, 0.3)), url(../img/panel/membership-badge.png); }
+    background-image: url(../img/panel/membership-badge.png); }
   .panel__four {
-    background-image: linear-gradient(rgba(10, 25, 161, 0.3), rgba(12, 34, 232, 0.3)), url(../img/panel/corner-flag.png); }
+    background-image: url(../img/panel/corner-flag.png); }
   .panel__five {
-    background-image: linear-gradient(rgba(10, 25, 161, 0.3), rgba(12, 34, 232, 0.3)), url(../img/panel/huddle.png); }
+    background-image: url(../img/panel/huddle.png); }
