--- a/sass/_serpent-cards.scss
+++ b/sass/_serpent-cards.scss
@@ -120,8 +120,10 @@
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 1rem;
+  /* don't want the height to be 100% of container */
   height: 90%;
   flex: 0.5;
+  cursor: pointer;
   &__one {
     background-image: url(../img/panel/player-flag.png);
   }
