--- a/css/style.css
+++ b/css/style.css
@@ -868,9 +868,10 @@ video {
   /* seperate the boxes slightly */
   margin: 0.3rem;
   cursor: pointer;
-  /* because want to place the text inside absolute */
-  position: relative;
   transition: flex 0.7s ease-in; }
+  .panel__text {
+    /* want to make text invisible unless clicking on panel */
+    opacity: 0; }
   .panel__one {
     background-image: url(../img/panel/player-flag.png); }
   .panel__two {
