--- a/sass/_serpent-cards.scss
+++ b/sass/_serpent-cards.scss
@@ -14,8 +14,9 @@
     background-repeat: no-repeat;
     /* first value = horizontal position. second = vertical. Top left corner = 0% 0%, 
     right corner = 100% 100% */
-    background-position: 50% 60%;
+    background-position: 50% 50%;
     background-size: cover;
+    overflow: hidden;
     filter: blur(0.05rem);
     @media only screen and (max-width: $bp-large) {
       grid-column: full-start / full-end;
@@ -37,13 +38,13 @@
     border-left: 0.3rem solid #00577b;
     border-right: 0.3rem solid #00577b;
     border-radius: 50%;
-    translate: -8rem 10rem;
+    translate: -11rem 9rem;
     animation: ripple 5s linear infinite;
     animation-delay: calc(-0.5s * var(--i));
   }
   &__ripple:nth-child(2) span {
     animation: ripple2 5s linear infinite;
-    translate: -8rem -40rem;
+    translate: -11rem -41rem;
     /* border styles for the ripples */
     border-bottom: 0.5rem solid #043950;
     border-left: 0.5rem solid #043950;
@@ -56,29 +57,14 @@
     border-bottom: 0.3rem solid $color-primary-dark;
     border-left: 0.3rem solid $color-primary-dark;
     border-right: 0.3rem solid $color-primary-dark;
-    translate: -8rem -90rem;
+    translate: -11rem -91rem;
     animation-delay: calc(-0.5s * var(--i));
   }
 }
 @keyframes ripple {
   0% {
-    width: 11rem;
-    height: 11rem;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    width: 25rem;
-    height: 25rem;
-    opacity: 0;
-  }
-}
-
-@keyframes ripple2 {
-  0% {
-    width: 11rem;
-    height: 11rem;
+    width: 10rem;
+    height: 10rem;
   }
   50% {
     opacity: 1;
@@ -89,10 +75,11 @@
     opacity: 0;
   }
 }
-@keyframes ripple3 {
+
+@keyframes ripple2 {
   0% {
-    width: 11rem;
-    height: 11rem;
+    width: 10rem;
+    height: 10rem;
   }
   50% {
     opacity: 1;
@@ -100,6 +87,20 @@
   100% {
     width: 35rem;
     height: 35rem;
+    opacity: 0;
+  }
+}
+@keyframes ripple3 {
+  0% {
+    width: 10rem;
+    height: 10rem;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    width: 40rem;
+    height: 40rem;
     opacity: 0;
   }
 }
@@ -131,8 +132,8 @@
   min-width: 0;
   /* seperate the boxes slightly */
   margin: 0.5rem;
-  cursor: pointer;
   transition: flex 0.7s ease-in;
+  cursor: pointer;
 
   &__text {
     /* want to make text invisible unless clicking on panel */
