--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -34,7 +34,7 @@ body {
   /* AFTER NOTES */ }
   @media only screen and (max-width: 87.5em) {
     .container {
-      grid-template-rows: 10rem 10rem calc(100vh - 20rem) calc(100vh - 20rem) calc( 100vh - 20rem); } }
+      grid-template-rows: 10rem 10rem 120vh calc(100vh - 20rem) calc( 100vh - 20rem); } }
 
 .features {
   /* features go from center-start to center-end - beginning to end of centre 8 grid */
@@ -360,14 +360,11 @@ td {
       .players__img {
         width: 6rem; } }
   .players__goals {
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    color: #f9f7f6;
     margin-top: -3px;
-    /* large being 62.5em - 1000px */ }
+    /* large being 62.5em - 1000px */
+    color: #f9f7f6; }
     @media only screen and (max-width: 62.5em) {
       .players__goals {
-        font-size: 0.75rem;
         margin-top: 0px; } }
   .players__name {
     /* large being 62.5em - 1000px */ }
@@ -623,7 +620,7 @@ td {
   .story__pictures {
     background-color: #0c22e8;
     grid-column: full-start / col-end 4;
-    background-image: linear-gradient(rgba(16, 29, 44, 0.7), rgba(16, 29, 44, 0.7)), url(../img/stadium-stand.png);
+    background-image: linear-gradient(rgba(10, 25, 161, 0.7), rgba(12, 34, 232, 0.7)), url(../img/graffiti/stadium-stand.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -702,6 +699,13 @@ td {
 
 .paragraph-text {
   font-size: 1.5rem; }
+  @media only screen and (max-width: 62.5em) {
+    .paragraph-text {
+      font-size: 0.75rem; } }
+  .paragraph-text--uppercase {
+    text-transform: uppercase; }
+  .paragraph-text--light {
+    color: #f9f7f6; }
 
 .btn {
   background-color: #0c22e8;
@@ -732,14 +736,12 @@ td {
 .video-sale__container {
   grid-column: col-end 7 / full-end;
   display: grid;
-  grid-template-rows: 40rem calc(100vh - 40rem); }
+  grid-template-rows: 40rem calc(100vh - 60rem); }
 
 .player {
   max-width: 100%;
   display: grid;
-  background: black; }
-  .player__paragraph {
-    color: white; }
+  background: #101d2c; }
 
 video {
   display: grid;
@@ -761,7 +763,7 @@ video {
 .sea-serpent__container {
   grid-column: col-end 4 / col-end 7;
   display: grid;
-  grid-template-rows: 40rem calc(100vh - 40rem); }
+  grid-template-rows: 40rem calc(100vh - 60rem); }
 
 .sea-serpent__content {
   grid-row: 1 /2;
@@ -827,7 +829,7 @@ video {
 @keyframes ripple2 {
   0% {
     width: 11rem;
-    height: 11rem; }
+    width: 11rem; }
   50% {
     opacity: 1; }
   100% {
@@ -848,7 +850,51 @@ video {
 
 .cards__container {
   grid-row: 2 /3;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  background-color: black; }
+  /* display flex makes them alinged in a row */
+  display: flex;
+  background-color: #101d2c;
+  /* align items centerally vertically - within flex box */
+  align-items: center; }
+
+.panel {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 1rem;
+  /* don't want the height to be 100% of container */
+  height: 90%;
+  /* width of an initial value of 0.5 for each of them */
+  flex-grow: 0.5;
+  /* flex-basis ensure flexbox ensure columns are distributed evenly */
+  flex-basis: 0;
+  /*  in cases where the width of the column content is forced (for example with image width or white-space: 
+  nowrap), the solution is to set min-width: 0 */
+  min-width: 0;
+  /* seperate the boxes slightly */
+  margin: 0.5rem;
+  cursor: pointer;
+  transition: flex 0.7s ease-in; }
+  .panel__text {
+    /* want to make text invisible unless clicking on panel */
+    opacity: 0; }
+  .panel__one {
+    background-image: url(../img/panel/player-flag.png); }
+  .panel__two {
+    background-image: url(../img/panel/goalkeeper.png); }
+  .panel__three {
+    background-image: url(../img/panel/membership-badge.png); }
+  .panel__four {
+    background-image: url(../img/panel/corner-flag.png); }
+  .panel__five {
+    background-image: url(../img/panel/huddle.png); }
+
+.panel.active {
+  flex: 3; }
+
+.panel.active p {
+  opacity: 1; }
+
+@media only screen and (max-width: 62.5em) {
+  .panel:nth-of-type(4),
+  .panel:nth-of-type(5) {
+    display: none; } }
