--- a/sass/_serpent-cards.scss
+++ b/sass/_serpent-cards.scss
@@ -7,8 +7,8 @@
   &__content {
     grid-row: 1 /2;
     background-image: linear-gradient(
-        rgba($color-primary-dark, 0.5),
-        rgba($color-primary, 0.1)
+        rgba($color-primary, 0.3),
+        rgba($color-primary-dark, 0.9)
       ),
       url(../img/sea-serpent.png);
     background-repeat: no-repeat;
@@ -34,66 +34,36 @@
     transform: rotateX(80deg);
     box-sizing: border-box;
     /* border styles for the ripples */
-    border-bottom: 0.3rem solid #00577b;
-    border-left: 0.3rem solid #00577b;
-    border-right: 0.3rem solid #00577b;
+    border-bottom: 0.3rem solid #0374a4;
+    border-left: 0.3rem solid #0374a4;
+    border-right: 0.3rem solid #0374a4;
     border-radius: 50%;
-    translate: -11rem 9rem;
+    translate: -10rem 9rem;
     animation: ripple 5s linear infinite;
     animation-delay: calc(-0.5s * var(--i));
   }
   &__ripple:nth-child(2) span {
     animation: ripple2 5s linear infinite;
-    translate: -11rem -41rem;
+    translate: -10rem -41rem;
     /* border styles for the ripples */
-    border-bottom: 0.5rem solid #043950;
-    border-left: 0.5rem solid #043950;
-    border-right: 0.5rem solid #043950;
-
+    border-bottom: 0.5rem solid #00577b;
+    border-left: 0.5rem solid #00577b;
+    border-right: 0.5rem solid #00577b;
     animation-delay: calc(-0.5s * var(--i));
   }
   &__ripple:nth-child(3) span {
     animation: ripple3 5s linear infinite;
-    border-bottom: 0.3rem solid $color-primary-dark;
-    border-left: 0.3rem solid $color-primary-dark;
-    border-right: 0.3rem solid $color-primary-dark;
-    translate: -11rem -91rem;
+    border-bottom: 0.3rem solid #043950;
+    border-left: 0.3rem solid #043950;
+    border-right: 0.3rem solid #043950;
+    translate: -10rem -91rem;
     animation-delay: calc(-0.5s * var(--i));
   }
 }
 @keyframes ripple {
   0% {
-    width: 10rem;
-    height: 10rem;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    width: 30rem;
-    height: 30rem;
-    opacity: 0;
-  }
-}
-
-@keyframes ripple2 {
-  0% {
-    width: 10rem;
-    height: 10rem;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    width: 35rem;
-    height: 35rem;
-    opacity: 0;
-  }
-}
-@keyframes ripple3 {
-  0% {
-    width: 10rem;
-    height: 10rem;
+    width: 11rem;
+    height: 11rem;
   }
   50% {
     opacity: 1;
@@ -101,6 +71,35 @@
   100% {
     width: 40rem;
     height: 40rem;
+    opacity: 0;
+  }
+}
+
+@keyframes ripple2 {
+  0% {
+    width: 11rem;
+    height: 11rem;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    width: 45rem;
+    height: 45rem;
+    opacity: 0;
+  }
+}
+@keyframes ripple3 {
+  0% {
+    width: 11rem;
+    height: 11rem;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    width: 50rem;
+    height: 50rem;
     opacity: 0;
   }
 }
@@ -130,29 +129,53 @@
   /*  in cases where the width of the column content is forced (for example with image width or white-space: 
   nowrap), the solution is to set min-width: 0 */
   min-width: 0;
+  /* positioning the text */
+  display: flex;
+  align-items: start;
+  justify-content: start;
   /* seperate the boxes slightly */
   margin: 0.5rem;
   transition: flex 0.7s ease-in;
   cursor: pointer;
-
   &__text {
     /* want to make text invisible unless clicking on panel */
     opacity: 0;
+    padding: 1rem;
   }
   &__one {
-    background-image: url(../img/panel/player-flag.png);
+    background-image: linear-gradient(
+        rgba($color-secondary, 0.3),
+        rgba($color-primary-dark, 0.3)
+      ),
+      url(../img/panel/player-flag.png);
   }
   &__two {
-    background-image: url(../img/panel/goalkeeper.png);
+    background-image: linear-gradient(
+        rgba($color-secondary, 0.5),
+        rgba($color-primary-dark, 0.5)
+      ),
+      url(../img/panel/goalkeeper.png);
   }
   &__three {
-    background-image: url(../img/panel/membership-badge.png);
+    background-image: linear-gradient(
+        rgba($color-secondary, 0.3),
+        rgba($color-primary-dark, 0.3)
+      ),
+      url(../img/panel/membership-badge.png);
   }
   &__four {
-    background-image: url(../img/panel/corner-flag.png);
+    background-image: linear-gradient(
+        rgba($color-secondary, 0.6),
+        rgba($color-primary-dark, 0.6)
+      ),
+      url(../img/panel/corner-flag.png);
   }
   &__five {
-    background-image: url(../img/panel/huddle.png);
+    background-image: linear-gradient(
+        rgba($color-secondary, 0.6),
+        rgba($color-primary-dark, 0.6)
+      ),
+      url(../img/panel/huddle.png);
   }
 }
 
