--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,4 +1,4 @@
-.second-nav {
+.nav {
   &__container {
     /* ensure the background-color of the overall bar is grey */
     background-color: $color-grey-1;
