--- a/sass/_serpent-cards.scss
+++ b/sass/_serpent-cards.scss
@@ -131,7 +131,7 @@
   min-width: 0;
   /* positioning the text */
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   /* seperate the boxes slightly */
   margin: 0.5rem;
