--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,8 +3,8 @@
 @import 'footer';
 @import 'banner';
 @import 'team';
-@import 'navbar-first';
-@import 'navbar-second';
+@import 'progress-timeline';
+@import 'navbar';
 @import 'story';
 @import 'typography';
 @import 'video-sale';
