--- a/sass/_serpent-cards.scss
+++ b/sass/_serpent-cards.scss
@@ -185,6 +185,9 @@
 
 .panel.active p {
   opacity: 1;
+  /* to slow down the opacity changes */
+  /* opacity to take 0.3 secondads, ease-in effect, 04.s delay */
+  transition: opacity 0.3s ease-in 0.4s;
 }
 
 @media only screen and (max-width: $bp-large) {
