--- a/sass/_serpent-cards.scss
+++ b/sass/_serpent-cards.scss
@@ -2,7 +2,7 @@
   &__container {
     grid-column: col-end 4 / col-end 7;
     display: grid;
-    grid-template-rows: 40rem calc(100vh - 60rem);
+    grid-template-rows: 40rem calc(95vh - 60rem);
   }
   &__content {
     grid-row: 1 /2;
@@ -140,7 +140,7 @@
   &__text {
     /* want to make text invisible unless clicking on panel */
     opacity: 0;
-    padding: 1rem;
+    margin-top: 0.5vh;
   }
   &__one {
     background-image: linear-gradient(
@@ -151,10 +151,10 @@
   }
   &__two {
     background-image: linear-gradient(
-        rgba($color-secondary, 0.5),
-        rgba($color-primary-dark, 0.5)
+        rgba($color-secondary, 0.6),
+        rgba($color-primary-dark, 0.6)
       ),
-      url(../img/panel/goalkeeper.png);
+      url(../img/panel/huddle.png);
   }
   &__three {
     background-image: linear-gradient(
@@ -172,10 +172,10 @@
   }
   &__five {
     background-image: linear-gradient(
-        rgba($color-secondary, 0.6),
-        rgba($color-primary-dark, 0.6)
+        rgba($color-secondary, 0.5),
+        rgba($color-primary-dark, 0.5)
       ),
-      url(../img/panel/huddle.png);
+      url(../img/panel/goalkeeper.png);
   }
 }
 
