first navbar back in

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,8 @@
 @import 'banner';
 @import 'team';
 @import 'progress-timeline';
-@import 'navbar';
+@import 'first-navbar';
+@import 'second-navbar';
 @import 'story';
 @import 'typography';
 @import 'video-sale';
