--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,12 @@ body {
 .container {
   display: grid;
   /* comments for the grid-template-rows */
-  grid-template-rows: 15rem 10rem calc(95vh - 20rem) 80vh min-content repeat(2, min-content);
+  grid-template-rows: 10rem 10rem calc(100vh - 20rem) 80vh min-content repeat(2, min-content);
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
   /* AFTER NOTES */ }
   @media only screen and (max-width: 87.5em) {
     .container {
-      grid-template-rows: 15rem 10rem 120vh calc(100vh - 20rem) calc( 100vh - 20rem); } }
+      grid-template-rows: 10rem 10rem 120vh calc(100vh - 20rem) calc( 100vh - 20rem); } }
 
 .features {
   /* features go from center-start to center-end - beginning to end of centre 8 grid */
@@ -382,16 +382,98 @@ td {
 .progress-timeline__content {
   display: flex; }
 
-.nav {
+.first-nav__container {
+  background-color: #0a19a1;
+  display: grid;
+  grid-column: full-start / full-end; }
+
+.first-nav__content {
+  /* I want the first navbar to start halfway along the page horizontally - from column 5 */
+  grid-column: 5 / 10;
+  grid-template-rows: repeat(2, min-content);
+  /* give sign up, cart etc a little space from the top of the container */
+  margin-top: 1.6rem; }
+
+.first-nav__list {
+  display: grid;
+  /* minmax(10rem, 1fr); minimum width of each column is 10rem, max width of 1fr. autofit = as many 
+      columns as possible in in grid containers width. 1fr = 1 part of the space available */
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  /* get rid of default bullets */
+  list-style: none; }
+
+.first-nav__link {
+  /* get rid of default link styles */
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #f9f7f6;
+  /* when an element is inline-block it still behaves like an inline element, but 
+    in this case we are able to define the width for it */
+  display: inline-block;
+  /* center items in grid cells - need element to take up entire width of grid cell */
+  width: 100%;
+  text-align: center; }
+
+.first-nav__link span {
+  font-size: 1.3rem; }
+
+.first-nav__link i {
+  font-size: 1.3rem;
+  /* providing some space on the right side */
+  margin-right: 0.3rem; }
+
+.search {
+  /* I want the search typing field to start 4/5 (or 6/10) along the page horizontally - (from column 6) */
+  /* I want the search typing field to finish 9/10 along the page horizontally */
+  grid-column: 6 / 9;
+  display: inline-block;
+  /* center items in grid cells - need element to take up entire width of grid cell */
+  width: 100%;
+  text-align: center; }
+  .search__form {
+    display: grid;
+    /* divide form element into 10 columns - each 10% width */
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr)); }
+  .search__input {
+    grid-row: 1 /2;
+    grid-column: 6 / 9;
+    /* top and botton 0.3rem, left and right 0.4rem */
+    padding: 0.3rem 0.4rem;
+    font-size: 1.3rem;
+    /* getting rid of the border around the search bar */
+    border: none;
+    /* change the background-color of inside of the search section to dark blue,
+      in line with the rest of the first nav */
+    background-color: #0a19a1;
+    /* change bottom border of search bar to white */
+    border-bottom: 0.1rem solid #f9f7f6;
+    outline: none;
+    font-family: 'Nunito', sans-serif;
+    /* change the color of text I'm inputing into the search bar */
+    color: #f9f7f6;
+    /* change color of the placeholder Search message in the search bar */ }
+  .search__input::placeholder {
+    color: #f9f7f6; }
+  .search__btn {
+    grid-row: 1 / 2;
+    grid-column: 8 / 9;
+    border: none;
+    /* get rid of grey background box around the question mark */
+    background-color: transparent;
+    /* change the color of the question mark */
+    color: #f9f7f6;
+    cursor: pointer; }
+
+.second-nav {
   /* inner being the links and the hamburger menu */ }
-  .nav__container {
+  .second-nav__container {
     /* ensure the background-color of the overall bar is grey */
     background-color: #f9f7f6;
     /* make second nav a grid */
     display: grid;
     /* ensure second nav is full width across the page */
     grid-column: full-start / full-end; }
-  .nav__badge {
+  .second-nav__badge {
     /* take the first column of the second nav grid */
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -401,14 +483,14 @@ td {
     height: 8rem;
     /* set margin from edge of page */
     margin: 1rem; }
-  .nav__content {
+  .second-nav__content {
     /* content being list and menu toggle */
     grid-column: 2 / 10;
     display: grid;
     /* align list items vertically in middle */
     align-content: center; }
     @media only screen and (max-width: 62.5em) {
-      .nav__content {
+      .second-nav__content {
         /* make navbar from beginning to end on smaller devices so can center it */
         grid-column: 1 / 10;
         /* ensure the links don't push too far down the page on smaller viewports */
@@ -422,7 +504,7 @@ td {
         /* links will be present if width is not 0 */
         width: 0;
         transition: all 0.8s; } }
-  .nav__list {
+  .second-nav__list {
     display: grid;
     /* align items on page horizontally */
     justify-items: center;
@@ -433,10 +515,10 @@ td {
     /* ensure font is right font for titles */
     font-family: "Lato", sans-serif; }
     @media only screen and (max-width: 62.5em) {
-      .nav__list {
+      .second-nav__list {
         /* make it one column taking up 100% of the width of to the content which was 1 / 10 column */
         grid-template-columns: 100%; } }
-  .nav__link {
+  .second-nav__link {
     text-transform: uppercase;
     /* get rid of list bullet points */
     text-decoration: none;
@@ -444,17 +526,17 @@ td {
     /* blue on the grey background for desktop */
     color: #0a19a1; }
     @media only screen and (max-width: 62.5em) {
-      .nav__link {
+      .second-nav__link {
         /* links font size increase */
         font-size: 4rem;
         /* padding top and bottom of the links */
         padding: 1rem 0;
         /* smaller devices - blue background - so links need to be white */
         color: #f9f7f6; } }
-  .nav__checkbox {
+  .second-nav__checkbox {
     /* checkbox hack - hide checkbox tick for the hamburger menu */
     display: none; }
-  .nav__button {
+  .second-nav__button {
     /* put it to the right on the viewport */
     grid-column: 9 / 10;
     grid-row: 1 / 2;
@@ -478,15 +560,15 @@ td {
     /* move toggle to the end horizontally*/
     justify-self: end; }
     @media only screen and (max-width: 62.5em) {
-      .nav__button {
+      .second-nav__button {
         /* only want to display the hamburger icon on smaller devices */
         display: flex;
         /* needs to be at the top above background on transform and general content */
         z-index: 3;
         background-color: #0a19a1; } }
-    .nav__button:hover {
+    .second-nav__button:hover {
       background-color: #0a19a1; }
-  .nav__background {
+  .second-nav__background {
     grid-column: 9 / 10;
     grid-row: 1 / 2;
     display: none;
@@ -499,49 +581,49 @@ td {
     z-index: 2;
     transition: transform 0.8s; }
     @media only screen and (max-width: 62.5em) {
-      .nav__background {
+      .second-nav__background {
         /* make background visible rather than not with display none on smaller devices */
         display: flex;
         /* push the background to end of the container horizontally */
         justify-self: end; } }
-  .nav__checkbox:checked ~ .nav__background {
+  .second-nav__checkbox:checked ~ .second-nav__background {
     /* scale the background on click - sibling of checkbox - background */
     transform: scale(120); }
-  .nav__checkbox:checked ~ .nav__content {
+  .second-nav__checkbox:checked ~ .second-nav__content {
     /* when click on checkbox - want sibling element content (i.e. the links be visible cause opacity and width was set as 0) */
     opacity: 1;
     width: 100%; }
-  .nav__icon {
+  .second-nav__icon {
     position: relative; }
-    .nav__icon, .nav__icon::before, .nav__icon::after {
+    .second-nav__icon, .second-nav__icon::before, .second-nav__icon::after {
       /* dimensions for lines on the hamburger menu */
       width: 4rem;
       height: 2px;
       background-color: #f9f7f6;
       display: flex; }
-    .nav__icon::before, .nav__icon::after {
+    .second-nav__icon::before, .second-nav__icon::after {
       content: '';
       position: absolute;
       left: 0;
       transition: all 0.2s; }
-    .nav__icon::before {
+    .second-nav__icon::before {
       /* move the before element up vertically hence minus rem */
       top: -1.2rem; }
-    .nav__icon::after {
+    .second-nav__icon::after {
       /* move the after element down vertically hence positive rem */
       top: 1.2rem; }
-  .nav__button:hover .nav__icon::before {
+  .second-nav__button:hover .second-nav__icon::before {
     /* effects on hover - moving the lines closer to the middle span */
     top: -0.8rem; }
-  .nav__button:hover .nav__icon::after {
+  .second-nav__button:hover .second-nav__icon::after {
     /* effects on hover - moving the lines closer to the middle span */
     top: 0.8rem; }
-  .nav__checkbox:checked + .nav__button .nav__icon {
+  .second-nav__checkbox:checked + .second-nav__button .second-nav__icon {
     background-color: transparent; }
-  .nav__checkbox:checked + .nav__button .nav__icon::before {
+  .second-nav__checkbox:checked + .second-nav__button .second-nav__icon::before {
     top: 0;
     transform: rotate(135deg); }
-  .nav__checkbox:checked + .nav__button .nav__icon::after {
+  .second-nav__checkbox:checked + .second-nav__button .second-nav__icon::after {
     top: 0;
     transform: rotate(-135deg); }
 
