--- a/sass/_second-navbar.scss
+++ b/sass/_second-navbar.scss
@@ -1,4 +1,4 @@
-.nav {
+.second-nav {
   &__container {
     /* ensure the background-color of the overall bar is grey */
     background-color: $color-grey-1;
