sorted second nav on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -583,7 +583,7 @@ td {
         /* only want to display the hamburger icon on smaller devices */
         display: flex;
         /* needs to be at the top above background on transform and general content */
-        z-index: 3;
+        z-index: 4;
         background-color: #0a19a1; } }
     .second-nav__button:hover {
       background-color: #0a19a1; }
@@ -595,9 +595,10 @@ td {
     margin: 1.5rem;
     height: 6rem;
     width: 6rem;
-    background-image: radial-gradient(#0c22e8, #f9f7f6);
-    /* needs to be be above general content but below the hamburger */
-    z-index: 2;
+    background-image: radial-gradient(#0c22e8, #aaa);
+    /* needs to be be above general content but below the hamburger 
+    - remember z-index: 2 for navigation buttons on slider */
+    z-index: 3;
     transition: transform 0.8s; }
     @media only screen and (max-width: 62.5em) {
       .second-nav__background {
